--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "particles": "^0.3.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-facebook-pixel": "^1.0.4",
     "react-icons": "^5.0.1",
     "react-particles": "^2.12.2",
     "react-slidy": "^4.3.3",
